Fixed the letter spacing -- it got too tight in the updated version of Webkit.

--- a/css/general.css
+++ b/css/general.css
@@ -22,6 +22,7 @@ html {
   -webkit-transform: translate3d(0, 0, 0) !important;
 
   font: normal 14px/19px Menlo,Inconsolata,Consolas,SourceCodePro,monospace;
+  letter-spacing: 0.4px;
   -webkit-user-select: none;
   user-select: none;
 }
